Fixes caching Added Kitty API
